--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.fbx filter=lfs diff=lfs merge=lfs -text
-*.obj filter=lfs diff=lfs merge=lfs -text
-*.mat filter=lfs diff=lfs merge=lfs -text
+assets/sword/sword.fbx filter=lfs diff=lfs merge=lfs -text
+assets/oni/onito.fbx filter=lfs diff=lfs merge=lfs -text
